feat(internal): implement transaction handler, rooutes, service, and swagger
